--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -1,8 +1,7 @@
-@import './variables.scss';
-@import './mixin.scss';
-@import './transition.scss';
-@import './element-ui.scss';
-@import './sidebar.scss';
+@import 'variables.less';
+@import 'transition';
+@import 'element-ui';
+@import 'sidebar';
 
 * {
   margin: 0;
