--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,4 +1,4 @@
-@import "../../styles/font";
+@import "../../assets/styles/font.less";
 .login-page {
   width: 100%;
   height: 100%;
@@ -25,7 +25,7 @@
     .el-button {
       width: 100%;
       margin: 0 auto;
-      font-size: $font-size-xl;
+      font-size: @font-size-xl;
     }
   }
 }
